[gd_scene load_steps=2 format=3 uid="uid://dkn45fwvqfdlw"]

[ext_resource type="Script" path="res://scripts/ui/dialog_choices.gd" id="1_script"]

[node name="DialogChoices" type="CanvasLayer"]
layer = 2
script = ExtResource("1_script")

[node name="ChoicesControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="ChoicesControl"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -380.0
offset_right = -40.0
offset_bottom = -50.0
mouse_filter = 1
theme_override_constants/separation = 12
